--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".StartingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,6 +18,9 @@
         </activity>
         <activity android:name=".SeconActivity"/>
         <activity android:name=".ThirdActivity"/>
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".FourthActivtity"/>
+        <activity android:name=".FinalActivity"/>
     </application>
 
 </manifest>
